--- a/Codify/html/newExercise(FTB).html
+++ b/Codify/html/newExercise(FTB).html
@@ -76,7 +76,7 @@
                             </div>
                             <form id="exerciseForm" align="center" onsubmit="event.preventDefault(); addExerciseFromForm();">
                                 <div>
-                                    <h5>Novo Exercício - Fill the Blanks</h5>
+                                    <h5 class="ex-type">Novo Exercício - Fill the Blanks</h5>
                                 </div>
                                 <div>
                                     <p>* Os espaços faltantes nas frases à serem completadas devem ser preenchidos por 10'_': '__________'</p>
@@ -141,8 +141,7 @@
             </div>
         </div>
     </div>
-            
-    <script src="/Codify/js/Views/exercisesView.js"></script>
+          
     <script src="/Codify/js/Models/newExerciseModel.js"></script>
     <script src="/Codify/js/fillTheBlanksExercise.js"></script>
     <script src="/Codify/js/multipleChoiceExercise.js"></script>
